# PlasticClassification

./: README.en.md  README.md
识别算法/: README.md  classifier.pkl  knn.pkl  knn.py  main.py  pyproject.toml  requirements.txt  tool.py  ui.py
识别算法/data/: test_data.csv  train_data.csv
软件代码/: plastic.ioc
软件代码/APP/CMD_PROCESS/: cmd_process.c  cmd_process.h
软件代码/Core/Inc/: usart.h
软件代码/Core/Src/: main.c  usart.c
软件代码/HARDWARE/AS726X/: as726x.c  as726x.h
软件代码/HARDWARE/OLED/: oled.c  oled.h
软件代码/MDK-ARM/: plastic.uvguix.86136  plastic.uvguix.Administrator  plastic.uvguix.PC  plastic.uvoptx  plastic.uvprojx  startup_stm32f103xb.lst
软件代码/MDK-ARM/.eide/: eide.json
软件代码/MDK-ARM/RTE/_plastic/: RTE_Components.h
软件代码/MDK-ARM/plastic/: as726x.crf  as726x.d  cmd_process.d  gpio.crf  gpio.d  i2c.crf  i2c.d  main.crf  main.d  oled.crf  oled.d  plastic.axf  plastic.build_log.htm  plastic.hex  plastic.htm  plastic.lnp  plastic.map  plastic_plastic.dep  startup_stm32f103xb.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_i2c.crf  stm32f1xx_hal_i2c.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.crf  (+17 more)
